
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int inet_addr (char*) ;
 int printf (char*,int) ;

int data_port(char *pasv, char *addr)
{
 int i=0,j,p1,p2,h1=1;
 p1=p2=0;
 for(j=0;j<4;j++)
  for(i+=1;pasv[i]!=',';i++);
 for(i+=1;pasv[i]!=',';i++)
  p1=p1*10+pasv[i]-'0';
 for(i+=1;pasv[i]!=')';i++)
  p2=p2*10+pasv[i]-'0';
 h1 += inet_addr(addr) & 0x000000ff;
 j = p1*h1*2+p2;
 printf("Data port: %d\n",j);
 return j;
}
